# ImageBind

./: .gitignore  Makefile  pyproject.toml  run.sh  setup.py
clip/: clip.py  model.py
imagebind/: data.py
imagebind/models/: force_model.py  imagebind_model.py  multimodal_preprocessors.py  pure_force_model.py  transformer.py
src/: lr_plot.py  split_data.py  train.py  train_fix copy.py  train_fix.py  train_imu.py
src/evaluation/: encoder.py  encoder_per_force.py  encoder_per_force_fix.py  imu.py  mapping.py  mapping_force.py  mapping_force_fix.py  pretrained.py
src/preprocess/: preprocess_imu.py  preprocess_videos.py  tmp_uid.py  uid_scenario.py  visualize.py
