[project]
name = "imagebind"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.24.1",
    "einops>=0.8.1",
    "eva-decord==0.6.1",
    "ftfy>=6.3.1",
    "fvcore>=0.1.5.post20221221",
    "iopath>=0.1.10",
    "matplotlib>=3.10.3",
    "mayavi>=4.8.3",
    "numpy>=1.19",
    "pandas>=2.2.3",
    "pytorchvideo",
    "regex>=2024.11.6",
    "timm==0.6.7",
    "torch==1.13.1",
    "torchaudio>=0.13.1",
    "torchvision>=0.14.1",
    "types-regex>=2024.11.6.20250403",
    "wandb>=0.19.11",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.sources]
pytorchvideo = { git = "https://github.com/facebookresearch/pytorchvideo.git", rev = "28fe037d212663c6a24f373b94cc5d478c8c1a1d" }
